[tool.poetry]
name = "encrypthis"
version = "0.1.0"
description = ""
authors = ["'Gilad Barnea' <giladbrn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
cryptography = "^37.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^22.6.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
encrypt = 'encrypthis.encrypt:encrypt'
decrypt = 'encrypthis.decrypt:decrypt'
genkey = 'encrypthis.util:genkey_cli'

[tool.black]
line-length = 100
include = '\.pyi?$'